<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_stats"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_courses"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/course_management"
        app:showAsAction="never" />
</menu>
